--- a/KM.SysControlAdmin.WebApp/KM.SysControlAdmin.WebApp.csproj
+++ b/KM.SysControlAdmin.WebApp/KM.SysControlAdmin.WebApp.csproj
@@ -11,4 +11,10 @@
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KM.SysControlAdmin.BL\KM.SysControlAdmin.BL.csproj" />
+    <ProjectReference Include="..\KM.SysControlAdmin.Core\KM.SysControlAdmin.Core.csproj" />
+    <ProjectReference Include="..\KM.SysControlAdmin.EN\KM.SysControlAdmin.EN.csproj" />
+  </ItemGroup>
+
 </Project>
