LOGICA DAL, BL Y CONTROLLER PARA RECUPERAR LA CONTRASEÑA

--- a/KM.SysControlAdmin.DAL/KM.SysControlAdmin.DAL.csproj
+++ b/KM.SysControlAdmin.DAL/KM.SysControlAdmin.DAL.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KM.SysControlAdmin.Core\KM.SysControlAdmin.Core.csproj" />
     <ProjectReference Include="..\KM.SysControlAdmin.EN\KM.SysControlAdmin.EN.csproj" />
   </ItemGroup>
 
